deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-score-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "social-score-ip"
    networking.gke.io/managed-certificates: "social-score-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: "social-score.example.com"
    http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: social-score-service
            port:
              number: 80
